--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Teller example</string>
     <string name="restart">Restart</string>
     <string name="data_deleted">Data deleted!</string>
+    <string name="clear">Clear</string>
 </resources>
